Fix wrapping of pre code blocks in item descriptions

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -415,4 +415,15 @@
       margin-bottom: 0;
     }
   }
+
+  pre {
+    @include styled-scrollbar;
+    width: 100%;
+    overflow-x: auto;
+    tab-size: 2;
+
+    code {
+      white-space: pre;
+    }
+  }
 }
