--- a/app/assets/stylesheets/wiki/_article.scss
+++ b/app/assets/stylesheets/wiki/_article.scss
@@ -32,6 +32,10 @@
   font-size: $font-size-base;
 }
 
+.article__main {
+  min-width: 100%;
+}
+
 .article__content {
   @extend .item__description;
   margin: 0;
